--- a/results/unigrams/unigrams_absolute.html
+++ b/results/unigrams/unigrams_absolute.html
@@ -1,158 +1,63 @@
-<head>
-    <meta charset="utf-8">
-    <title>Orange Report</title>
+Test & Score Do Sep 29 16, 09:51:11
+Settings
 
-    <style>
-    html, body, table {
-        font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-        font-size: 13px;
-        margin:0px;
-        padding:0;
-        border:0 none;
-    }
+Sampling type: Stratified 10-fold Cross validation
+Target class: Average over classes
+Scores
 
-    h1, h2 , h3, h4, h5 {
-       padding: 1px;
-       font-size:100%;
-    }
+Method	AUC	CA	F1	Precision	Recall
+Logistic Regression	0.692	0.644	0.621	0.631	0.644
+Test & Score Do Sep 29 16, 09:51:19
+Settings
 
-    h1 {
-        color: white;
-        background-color: black;
-        padding: 4px;
-        margin-top: 12px;
-        margin-bottom: 6px;
-    }
+Sampling type: Stratified 10-fold Cross validation
+Target class: ambiguous
+Scores
 
-    h2 {
-        border-bottom: 1px solid black;
-        padding-left: 2px;
-    }
+Method	AUC	CA	F1	Precision	Recall
+Logistic Regression	0.500	0.997	0.000	0.000	0.000
+Test & Score Do Sep 29 16, 09:51:20
+Settings
 
-    ul, table, p {
-        padding: 10px;
-    }
+Sampling type: Stratified 10-fold Cross validation
+Target class: lang1
+Scores
 
-    table {
-        margin-left: -6px;
-    }
+Method	AUC	CA	F1	Precision	Recall
+Logistic Regression	0.709	0.706	0.694	0.650	0.745
+Test & Score Do Sep 29 16, 09:51:24
+Settings
 
-    span.timestamp {
-        position: absolute;
-        right: 40px;
-        color:#ddd;
-    }
+Sampling type: Stratified 10-fold Cross validation
+Target class: lang2
+Scores
 
-    div.selected, div.normal {
-        margin: 5px;
-    }
+Method	AUC	CA	F1	Precision	Recall
+Logistic Regression	0.729	0.733	0.669	0.630	0.712
+Test & Score Do Sep 29 16, 09:51:26
+Settings
 
-    div.selected {
-        background: #ddd;
-    }
-    @media print{
-        div.selected {
-            background: inherit;
-        }
-        ::-webkit-input-placeholder {
-            color: transparent;
-        }
-    }
+Sampling type: Stratified 10-fold Cross validation
+Target class: mixed
+Scores
 
-    div.content {
-        margin-left: 15px;
-    }
+Method	AUC	CA	F1	Precision	Recall
+Logistic Regression	0.500	0.998	0.000	0.000	0.000
+Test & Score Do Sep 29 16, 09:51:29
+Settings
 
-    th, td {
-        text-align: left;
-        padding: 2px 6px 2px 6px;
-    }
+Sampling type: Stratified 10-fold Cross validation
+Target class: ne
+Scores
 
-    @media screen {
-        td, th {
-            white-space: nowrap;
-        }
-    }
+Method	AUC	CA	F1	Precision	Recall
+Logistic Regression	0.524	0.917	0.102	0.270	0.063
+Test & Score Do Sep 29 16, 09:51:31
+Settings
 
-    .caption {
-        text-align: center;
-        font-size: 90%;
-    }
+Sampling type: Stratified 10-fold Cross validation
+Target class: other
+Scores
 
-    img {
-        display: block;
-        margin: auto;
-        max-height: 20cm;
-    }
-
-    span.legend-square {
-        width: 1em;
-        height: 1em;
-        margin-right: 6px;
-        display: inline-block;
-    }
-
-    span.legend-item {
-        margin-right: 24px;
-    }
-
-    textarea {
-        border: none;
-        font-style: italic;
-        width: 100%;
-        height: 4em;
-    }
-
-    .textwrapper {
-        padding: 15px;
-    }
-
-    div.normal textarea:invalid {
-        display: none;
-    }
-
-    div.selected textarea {
-        display: block;
-    }
-
-    @media print{
-        section.section, img {
-            page-break-inside: avoid;
-        }
-    }
-    </style>
-
-
-</head><body>
-
- 
-
-<div id="139778801692888" class="normal" onclick="pybridge._select_item(this.id)"><section class="section"><h1>Test &amp; Score <span class="timestamp">Do Sep 29 16, 09:51:11</span></h1><div class="content">
-<h2>Settings</h2><ul><b>Sampling type:</b> Stratified 10-fold Cross validation<br><b>Target class:</b> Average over classes<br></ul><h2>Scores</h2><table>
-<tbody><tr><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Method</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">AUC</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">CA</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">F1</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Precision</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Recall</th></tr><tr><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Logistic Regression</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.692</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.644</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.621</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.631</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.644</td></tr></tbody></table></div></section>
-
-<div class="textwrapper"><textarea required="required" placeholder="Write a comment..." oninput="pybridge._add_comment(this.parentNode.parentNode.id, this.value)"></textarea></div></div><div id="139778802870456" class="normal" onclick="pybridge._select_item(this.id)"><section class="section"><h1>Test &amp; Score <span class="timestamp">Do Sep 29 16, 09:51:19</span></h1><div class="content">
-<h2>Settings</h2><ul><b>Sampling type:</b> Stratified 10-fold Cross validation<br><b>Target class:</b> ambiguous<br></ul><h2>Scores</h2><table>
-<tbody><tr><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Method</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">AUC</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">CA</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">F1</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Precision</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Recall</th></tr><tr><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Logistic Regression</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.500</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.997</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.000</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.000</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.000</td></tr></tbody></table></div></section>
-
-<div class="textwrapper"><textarea required="required" placeholder="Write a comment..." oninput="pybridge._add_comment(this.parentNode.parentNode.id, this.value)"></textarea></div></div><div id="139778794590712" class="normal" onclick="pybridge._select_item(this.id)"><section class="section"><h1>Test &amp; Score <span class="timestamp">Do Sep 29 16, 09:51:20</span></h1><div class="content">
-<h2>Settings</h2><ul><b>Sampling type:</b> Stratified 10-fold Cross validation<br><b>Target class:</b> lang1<br></ul><h2>Scores</h2><table>
-<tbody><tr><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Method</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">AUC</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">CA</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">F1</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Precision</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Recall</th></tr><tr><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Logistic Regression</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.709</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.706</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.694</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.650</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.745</td></tr></tbody></table></div></section>
-
-<div class="textwrapper"><textarea required="required" placeholder="Write a comment..." oninput="pybridge._add_comment(this.parentNode.parentNode.id, this.value)"></textarea></div></div><div id="139778793759512" class="normal" onclick="pybridge._select_item(this.id)"><section class="section"><h1>Test &amp; Score <span class="timestamp">Do Sep 29 16, 09:51:24</span></h1><div class="content">
-<h2>Settings</h2><ul><b>Sampling type:</b> Stratified 10-fold Cross validation<br><b>Target class:</b> lang2<br></ul><h2>Scores</h2><table>
-<tbody><tr><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Method</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">AUC</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">CA</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">F1</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Precision</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Recall</th></tr><tr><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Logistic Regression</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.729</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.733</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.669</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.630</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.712</td></tr></tbody></table></div></section>
-
-<div class="textwrapper"><textarea required="required" placeholder="Write a comment..." oninput="pybridge._add_comment(this.parentNode.parentNode.id, this.value)"></textarea></div></div><div id="139778802413640" class="normal" onclick="pybridge._select_item(this.id)"><section class="section"><h1>Test &amp; Score <span class="timestamp">Do Sep 29 16, 09:51:26</span></h1><div class="content">
-<h2>Settings</h2><ul><b>Sampling type:</b> Stratified 10-fold Cross validation<br><b>Target class:</b> mixed<br></ul><h2>Scores</h2><table>
-<tbody><tr><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Method</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">AUC</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">CA</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">F1</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Precision</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Recall</th></tr><tr><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Logistic Regression</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.500</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.998</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.000</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.000</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.000</td></tr></tbody></table></div></section>
-
-<div class="textwrapper"><textarea required="required" placeholder="Write a comment..." oninput="pybridge._add_comment(this.parentNode.parentNode.id, this.value)"></textarea></div></div><div id="139778801695624" class="normal" onclick="pybridge._select_item(this.id)"><section class="section"><h1>Test &amp; Score <span class="timestamp">Do Sep 29 16, 09:51:29</span></h1><div class="content">
-<h2>Settings</h2><ul><b>Sampling type:</b> Stratified 10-fold Cross validation<br><b>Target class:</b> ne<br></ul><h2>Scores</h2><table>
-<tbody><tr><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Method</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">AUC</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">CA</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">F1</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Precision</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Recall</th></tr><tr><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Logistic Regression</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.524</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.917</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.102</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.270</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.063</td></tr></tbody></table></div></section>
-
-<div class="textwrapper"><textarea required="required" placeholder="Write a comment..." oninput="pybridge._add_comment(this.parentNode.parentNode.id, this.value)"></textarea></div></div><div id="139778802110328" class="normal" onclick="pybridge._select_item(this.id)"><section class="section"><h1>Test &amp; Score <span class="timestamp">Do Sep 29 16, 09:51:31</span></h1><div class="content">
-<h2>Settings</h2><ul><b>Sampling type:</b> Stratified 10-fold Cross validation<br><b>Target class:</b> other<br></ul><h2>Scores</h2><table>
-<tbody><tr><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Method</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">AUC</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">CA</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">F1</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Precision</th><th style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Recall</th></tr><tr><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">Logistic Regression</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.690</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.938</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.534</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.874</td><td style="color:black;border:0;background:transparent;font-weight:normal;text-align:left;vertical-align:middle;">0.385</td></tr></tbody></table></div></section>
-
-<div class="textwrapper"><textarea required="required" placeholder="Write a comment..." oninput="pybridge._add_comment(this.parentNode.parentNode.id, this.value)"></textarea></div></div></body>
+Method	AUC	CA	F1	Precision	Recall
+Logistic Regression	0.690	0.938	0.534	0.874	0.385
